Create custom search form

--- a/style.css
+++ b/style.css
@@ -1014,8 +1014,8 @@ object {
 #searchform .search-input {
 	width: 150px;
 	height: 20px;
+	background-color: #ffffff;
 	border: 1px solid #62585f;
-	color: #ffffff;
 	border-radius: 3px;
 }
 
