Add comment before custom css

--- a/style.css
+++ b/style.css
@@ -976,6 +976,10 @@ object {
 }
 
 
+/*--------------------------------------------------------------
+## Custom CSS
+--------------------------------------------------------------*/
+
 .site-header {
 	height: 105px;
 	width: 100%;
