--- a/css/front-page.css
+++ b/css/front-page.css
@@ -1,38 +1,42 @@
 /*
 * This css only applies to front-page.php template.
 */
-
 div.front-header {
-	height: 544px;
-	width: 100%;
-	text-align: center;
-	background-color: #e73d2d;
+  height: 544px;
+  width: 100%;
+  text-align: center;
+  background-color: #e73d2d;
+  margin-bottom: 3px;
 }
-
 div.front-header > img {
-	height: 100%;
+  height: 100%;
 }
-
 div.front-header > div.text-block {
-    position: relative;
-    top: -44%;
+  position: relative;
+  top: -44%;
 }
-
 div.front-header > div.text-block div {
-    font-family: 'Open sans';
-    font-weight: bold;
-    font-size: 70px;
-    color: #ffffff;
-    text-shadow: 2px #950904;
+  font-family: "Open sans";
+  font-weight: bold;
+  font-size: 70px;
+  color: #ffffff;
+  text-shadow: 2px #950904;
+}
+div.front-header > div.text-block p {
+  font-family: "Open sans";
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  color: #ffffff;
+  padding-top: 10px;
+  width: 45%;
+  margin: auto;
 }
 
-div.front-header > div.text-block p {
-    font-family: 'Open sans';
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 24px;
-    color: #ffffff;
-    padding-top: 10px;
-    width: 45%;
-    margin: auto;
+div.features {
+  background-image: url("../img/features-repeatable-bg.png");
+  height: 101px;
+  width: 100%;
 }
+
+/*# sourceMappingURL=front-page.css.map */
