--- a/sass/front-page.scss
+++ b/sass/front-page.scss
@@ -24,7 +24,7 @@ div.front-header {
             font-weight: bold;
             font-size: 70px;
             color: #ffffff;
-            text-shadow: 2px #950904;
+            text-shadow: 2px 2px #950904;
         }
 
         p {
