--- a/css/theme.css
+++ b/css/theme.css
@@ -125,7 +125,7 @@ div#primary main#main div.main-title span {
   color: #62585f;
   text-shadow: 2px 2px #ffffff;
 }
-div#primary main#main div.main-title button {
+div#primary main#main div.main-title a {
   font-family: "Open sans";
   font-weight: normal;
   font-size: 16px;
@@ -133,12 +133,14 @@ div#primary main#main div.main-title button {
   background-color: #222222;
   padding: 10px;
   border-radius: 5px;
-  line-height: 0;
+  line-height: 0.5;
   height: 1.8em;
   position: relative;
-  top: 1.25em;
+  top: 1.3em;
+  display: block;
+  text-decoration: none;
 }
-div#primary main#main div.main-title button:hover, div#primary main#main div.main-title button.selected {
+div#primary main#main div.main-title a:hover, div#primary main#main div.main-title a.selected {
   background-color: #ef4634;
 }
 div#primary main#main div.portfolio-block {
