--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -150,7 +150,7 @@ div#primary {
                 text-shadow: 2px 2px #ffffff;
             }
 
-            button {
+            a {
                 font-family: 'Open sans';
                 font-weight: normal;
                 font-size: 16px;
@@ -158,13 +158,15 @@ div#primary {
                 background-color: #222222;
                 padding: 10px;
                 border-radius: 5px;
-                line-height: 0;
+                line-height: 0.5;
                 height: 1.8em;
                 position: relative;
-                top: 1.25em;
+                top: 1.3em;
+                display: block;
+                text-decoration: none;
             }
 
-            button:hover, button.selected {
+            a:hover, a.selected {
                 background-color: #ef4634;
             }
         }
