--- a/css/theme.css
+++ b/css/theme.css
@@ -117,16 +117,34 @@ div#primary main#main div.main-title {
   display: flex;
   justify-content: space-between;
   border-bottom: 1px solid #62585f;
+  font-family: "Open sans";
 }
 div#primary main#main div.main-title span {
-  font-family: "Open sans";
   font-weight: lighter;
   font-size: 45px;
   color: #62585f;
   text-shadow: 2px 2px #ffffff;
 }
-div#primary main#main div.main-title a {
-  font-family: "Open sans";
+div#primary main#main div.main-title > a {
+  font-weight: normal;
+  font-size: 16px;
+  color: #ffffff;
+  background-color: #222222;
+  padding: 10px;
+  border-radius: 5px;
+  line-height: 0.5;
+  height: 1.8em;
+  position: relative;
+  top: 1.3em;
+  display: block;
+  text-decoration: none;
+}
+div#primary main#main div.main-title div {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-gap: 0.5em;
+}
+div#primary main#main div.main-title div a {
   font-weight: normal;
   font-size: 16px;
   color: #ffffff;
@@ -285,6 +303,10 @@ footer.site-footer div.copyright-div {
 }
 footer.site-footer div.copyright-div a.copyright-rtcamp {
   color: #ef4634;
+}
+
+div#portfolio-modal {
+  display: none;
 }
 
 /*# sourceMappingURL=theme.css.map */
