--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -93,7 +93,6 @@ div.portfolio-taxonomy {
                 display: flex;
                 justify-content: space-between;
 
-                
                 img {
                     position: relative;
                     top: 15%;
@@ -102,13 +101,17 @@ div.portfolio-taxonomy {
                 }
 
                 div.portfolio-taxonomy-details {
-                    
-                    span.portfolio-taxonomy-title {
-                        font-family: 'Open sans';
-                        font-weight: bold;
-                        font-size: 20px;
-                        color: #ef4634;
-                        text-shadow: 2px 2px #ffffff;
+
+                    a {
+                        text-decoration: none;
+
+                        span.portfolio-taxonomy-title {
+                            font-family: 'Open sans';
+                            font-weight: bold;
+                            font-size: 20px;
+                            color: #ef4634;
+                            text-shadow: 2px 2px #ffffff;
+                        }
                     }
 
                     span.portfolio-taxonomy-title:hover {
@@ -200,19 +203,20 @@ div#primary {
             div.portfolio-grid {
                 width: 100%;
                 display: grid;
-                grid-template-columns: auto auto auto;
-                grid-gap: 17px;
+                grid-template-columns: 33% 33% 33%;
+                grid-column-gap: 1%;
+                grid-row-gap: 1em;
 
                 .portfolio-item {
-                    height: 210px;
-                    width: 300px;
                     position: relative;
     
                     img.portfolio-img {
-                        height: 100%;
-                        width: 100%;
+                        height: 210px;
+                        width: 300px;
                         border-radius: 10px;
                         object-fit: none;
+                        padding: 0;
+                        margin: 0;
                     }
     
                     .portfolio-overlay {
@@ -221,8 +225,8 @@ div#primary {
                         bottom: 0;
                         left: 0;
                         right: 0;
-                        height: 100%;
-                        width: 100%;
+                        height: 210px;
+                        width: 300px;
                         opacity: 0;
                         transition: .5s ease;
                         border-radius: 10px;
